admission-controller/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: admission-controller
  labels:
    name: admission-controller
