admission-controller/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admission-controller
  namespace: admission-controller
  labels:
    app: admission-controller
spec:
  selector:
    app: admission-controller
  ports:
  - port: 443
    targetPort: 8443
    protocol: TCP
    name: webhook-api
