admission-controller/manifests/webhook-config-with-ca.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: change-validation-webhook
webhooks:
  - name: change-validation.company.com
    clientConfig:
      service:
        name: admission-controller
        namespace: admission-controller
        path: "/admit"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURyVENDQXBXZ0F3SUJBZ0lVS2tOanh0N1IxZExZU1RxTWplaG1UMENscy9Bd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1pqRUxNQWtHQTFVRUJoTUNWVk14Q3pBSkJnTlZCQWdNQWtOQk1SWXdGQVlEVlFRSERBMVRZVzRnUm5KaApibU5wYzJOdk1SQXdEZ1lEVlFRS0RBZERiMjF3WVc1NU1TQXdIZ1lEVlFRRERCZEJaRzFwYzNOcGIyNGdRMjl1CmRISnZiR3hsY2lCRFFUQWVGdzB5TlRBMk1UTXhOVFF3TVRGYUZ3MHlOakEyTVRNeE5UUXdNVFZhTUdZeEN6QUoKQmdOVkJBWVRBbFZUTVFzd0NRWURWUVFJREFKRFFURVdNQlFHQTFVRUJ3d05VMkZ1SUVaeVlXNWphWE5qYnpFUQpNQTRHQTFVRUNn [...]
    rules:
    - operations: ["CREATE", "UPDATE"]
      apiGroups: ["apps"]
      apiVersions: ["v1"]
      resources: ["deployments"]
    - operations: ["CREATE", "UPDATE"]
      apiGroups: [""]
      apiVersions: ["v1"] 
      resources: ["services", "configmaps"]
    namespaceSelector:
      matchLabels:
        change-validation: "enabled"
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
    failurePolicy: Fail
